; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_im2col.c_im2col_get_pixel.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_im2col.c_im2col_get_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @im2col_get_pixel(float* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca float, align 4
  %10 = alloca float*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store float* %0, float** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %14, align 4
  %20 = sub nsw i32 %19, %18
  store i32 %20, i32* %14, align 4
  %21 = load i32, i32* %17, align 4
  %22 = load i32, i32* %15, align 4
  %23 = sub nsw i32 %22, %21
  store i32 %23, i32* %15, align 4
  %24 = load i32, i32* %14, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %37, label %26

26:                                               ; preds = %8
  %27 = load i32, i32* %15, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %37, label %29

29:                                               ; preds = %26
  %30 = load i32, i32* %14, align 4
  %31 = load i32, i32* %11, align 4
  %32 = icmp sge i32 %30, %31
  br i1 %32, label %37, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* %15, align 4
  %35 = load i32, i32* %12, align 4
  %36 = icmp sge i32 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %33, %29, %26, %8
  store float 0.000000e+00, float* %9, align 4
  br label %52

38:                                               ; preds = %33
  %39 = load float*, float** %10, align 8
  %40 = load i32, i32* %15, align 4
  %41 = load i32, i32* %12, align 4
  %42 = load i32, i32* %14, align 4
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %16, align 4
  %45 = mul nsw i32 %43, %44
  %46 = add nsw i32 %42, %45
  %47 = mul nsw i32 %41, %46
  %48 = add nsw i32 %40, %47
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds float, float* %39, i64 %49
  %51 = load float, float* %50, align 4
  store float %51, float* %9, align 4
  br label %52

52:                                               ; preds = %38, %37
  %53 = load float, float* %9, align 4
  ret float %53
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
